# mortgage_calc

./: .gitignore  README.md  mortgage_calculator.py  mortgage_config.json  mortgage_schedule.csv  pyproject.toml  scenario_comparison.xlsx
prompt_history/: 01_initial_prompt.md  02_update_with_csv.md  03_update_readme.md  04_output_formatting.md  05_intrest_rate_stats.md  06_mortgage_comparision.md  07_mortgage_comparision_output.md
src/api/: main.py
src/mortgage_lib/: calculation.py  models.py  reports.py  scenarios.py
src/ui/: app.py
